[package]
name = "zemi-identity"
version = "0.1.0"
edition = "2021"
authors = ["Hedzer Ferwerda <hedzer87+crates.io@gmail.com>"]
description = "Identity tools that can be used to create credentials without a trusted third party. This library can deterministically produce an asymmetric keypair from user credentials. It also generates a consistent public identity tied to the provided username that cannot easily be used to discover the username."
license = "MIT"
repository = "https://github.com/Hedzer/zemi-identity"
documentation = "README.md"

[dependencies]
rust-argon2 = "1.0"
base64-url = "1.4.13"
ed25519-dalek = "1.0.1"
sha2 = "0.10.6"
thiserror = "1.0.37"